修復navbar的調整後出現的scrollbar BUG

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -31,6 +31,11 @@ section {
     scroll-snap-align: start;
     /* 讓所有 section 的背景都變成透明，才能看到後面的粒子 */
     background-color: transparent;
+    scroll-margin-top: var(--header-height, 80px);
+}
+
+:root {
+  --header-height: 65px; /* 改成你實際 header 高度 */
 }
 
 h1 {
